# specs

./: AGENTS.md  README.md
.agents/add-minor-version/: SKILL.md
.agents/fetch-specs/: SKILL.md
.agents/pin-github-action/: SKILL.md
.github/workflows/: fetch-specs.yml
spec-fetcher/: Cargo.toml
spec-fetcher/src/: main.rs
