[package]
name = "spec-fetcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spec-fetcher"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
wiremock = "0.6"
